plugins {
    alias(libs.plugins.android.application)
    id 'com.google.gms.google-services'
}

android {
    namespace 'com.zblouse.fantasyfitness'
    compileSdk 34

    defaultConfig {
        applicationId "com.zblouse.fantasyfitness"
        minSdk 31
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        debug {
            testCoverageEnabled true
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    testOptions {
        unitTests {
            includeAndroidResources = true
        }
        unitTests.all {
            jvmArgs '-noverify','-Djdk.attach.allowAttachSelf=true'
        }
    }
}

dependencies {

    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout

    implementation(platform("com.google.firebase:firebase-bom:33.8.0"))
    implementation("com.google.firebase:firebase-auth")
    implementation("com.google.android.gms:play-services-auth:20.7.0")
    implementation "com.google.android.gms:play-services-location:21.3.0"
    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
    implementation("com.google.firebase:firebase-firestore")
    implementation "androidx.cardview:cardview:1.0.0"

    testImplementation libs.junit
    testImplementation("org.mockito:mockito-core:5.15.2")
    testImplementation 'org.robolectric:robolectric:4.14'
    testImplementation 'androidx.arch.core:core-testing:2.2.0'

    androidTestImplementation("org.mockito:mockito-android:5.15.2")
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
    androidTestImplementation 'androidx.test:runner:1.3.0'
    androidTestImplementation 'androidx.test:rules:1.3.0'
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
}